Analyse_lexicale_et_syntaxique/Tiger3Parser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 Tiger3.g 2016-02-26 17:28:29

import java.util.HashMap;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class Tiger3Parser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "TAIGA", "DECLARATIONS", "BLOCK", "COMP", "COND", "BEGIN", "END", "PARAMSFORM", "PARAMSEFF", "PARAM", "TYPE", "TAB", "FIELD", "STRUCT", "CELL", "SIZE", "INIT", "PRIMITIF", "IDF", "CONST", "FUNC_DECL", "FUNC_CALL", "EMPTY_SEQ", "ID", "INT", "STRING", "WS", "NEWLINE", "COMMENT", "'{'", "'}'", "','", "';'", "':='", "'|'", "'&'", "'>'", "'='", "'<'", "'*'", "'/'", "'-'", "'('", "')'", "'.'", "'['", "']'", "'array of'", "':'", "'int'", "'string'", "'array'", "'break'", "'do'", "'else'", "'end'", "'for'", "'function'", "'if'", "'in'", "'nil'", "'let'", "'of'", "'then'", "'to'", "'type'", "'var'", "'while'", "'typedef'", "'block'", "'+'"
    };
    public static final int EOF=-1;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int TAIGA=4;
    public static final int DECLARATIONS=5;
    public static final int BLOCK=6;
    public static final int COMP=7;
    public static final int COND=8;
    public static final int BEGIN=9;
    public static final int END=10;
    public static final int PARAMSFORM=11;
    public static final int PARAMSEFF=12;
    public static final int PARAM=13;
    public static final int TYPE=14;
    public static final int TAB=15;
    public static final int FIELD=16;
    public static final int STRUCT=17;
    public static final int CELL=18;
    public static final int SIZE=19;
    public static final int INIT=20;
    public static final int PRIMITIF=21;
    public static final int IDF=22;
    public static final int CONST=23;
    public static final int FUNC_DECL=24;
    public static final int FUNC_CALL=25;
    public static final int EMPTY_SEQ=26;
    public static final int ID=27;
    public static final int INT=28;
    public static final int STRING=29;
    public static final int WS=30;
    public static final int NEWLINE=31;
    public static final int COMMENT=32;

    // delegates
    // delegators


        public Tiger3Parser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public Tiger3Parser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return Tiger3Parser.tokenNames; }
    public String getGrammarFileName() { return "Tiger3.g"; }


    /** Map variable name to Integer object holding value */
    HashMap<String,Integer>  memory = new HashMap<String,Integer>();


    public static class tiger3_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "tiger3"
    // Tiger3.g:45:1: tiger3 : e1= expr -> ^( TAIGA $e1) ;
    public final Tiger3Parser.tiger3_return tiger3() throws RecognitionException {
        Tiger3Parser.tiger3_return retval = new Tiger3Parser.tiger3_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Tiger3Parser.expr_return e1 = null;


        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        try {
            // Tiger3.g:45:8: (e1= expr -> ^( TAIGA $e1) )
            // Tiger3.g:45:10: e1= expr
            {
            pushFollow(FOLLOW_expr_in_tiger3119);
            e1=expr();

            state._fsp--;

            stream_expr.add(e1.getTree());


            // AST REWRITE
            // elements: e1
            // token labels: 
            // rule labels: e1, retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_e1=new RewriteRuleSubtreeStream(adaptor,"rule e1",e1!=null?e1.tree:null);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 45:18: -> ^( TAIGA $e1)
            {
                // Tiger3.g:45:21: ^( TAIGA $e1)
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(TAIGA, "TAIGA"), root_1);

                adaptor.addChild(root_1, stream_e1.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "tiger3"

    public static class expr_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expr"
    // Tiger3.g:47:1: expr : ( nilexp | affect | type_id ( '{' ( field_list )* '}' )? | ifop | forop | whileop | breakexp | l= letexp (decl= declaration_list )? inexp (e= expr_seq )? endexp -> ^( $l ( ^( DECLARATIONS $decl) )? ( ^( BLOCK $e) )? ) );
    public final Tiger3Parser.expr_return expr() throws RecognitionException {
        Tiger3Parser.expr_return retval = new Tiger3Parser.expr_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal4=null;
        Token char_literal6=null;
        Tiger3Parser.letexp_return l = null;

        Tiger3Parser.declaration_list_return decl = null;

        Tiger3Parser.expr_seq_return e = null;

        Tiger3Parser.nilexp_return nilexp1 = null;

        Tiger3Parser.affect_return affect2 = null;

        Tiger3Parser.type_id_return type_id3 = null;

        Tiger3Parser.field_list_return field_list5 = null;

        Tiger3Parser.ifop_return ifop7 = null;

        Tiger3Parser.forop_return forop8 = null;

        Tiger3Parser.whileop_return whileop9 = null;

        Tiger3Parser.breakexp_return breakexp10 = null;

        Tiger3Parser.inexp_return inexp11 = null;

        Tiger3Parser.endexp_return endexp12 = null;


        Object char_literal4_tree=null;
        Object char_literal6_tree=null;
        RewriteRuleSubtreeStream stream_expr_seq=new RewriteRuleSubtreeStream(adaptor,"rule expr_seq");
        RewriteRuleSubtreeStream stream_letexp=new RewriteRuleSubtreeStream(adaptor,"rule letexp");
        RewriteRuleSubtreeStream stream_inexp=new RewriteRuleSubtreeStream(adaptor,"rule inexp");
        RewriteRuleSubtreeStream stream_endexp=new RewriteRuleSubtreeStream(adaptor,"rule endexp");
        RewriteRuleSubtreeStream stream_declaration_list=new RewriteRuleSubtreeStream(adaptor,"rule declaration_list");
        try {
            // Tiger3.g:47:6: ( nilexp | affect | type_id ( '{' ( field_list )* '}' )? | ifop | forop | whileop | breakexp | l= letexp (decl= declaration_list )? inexp (e= expr_seq )? endexp -> ^( $l ( ^( DECLARATIONS $decl) )? ( ^( BLOCK $e) )? ) )
            int alt5=8;
            switch ( input.LA(1) ) {
            case 64:
                {
                alt5=1;
                }
                break;
            case ID:
            case INT:
            case STRING:
            case 45:
            case 46:
                {
                alt5=2;
                }
                break;
            case 53:
            case 54:
                {
                alt5=3;
                }
                break;
            case 62:
                {
                alt5=4;
                }
                break;
            case 60:
                {
                alt5=5;
                }
                break;
            case 71:
                {
                alt5=6;
                }
                break;
            case 56:
                {
                alt5=7;
                }
                break;
            case 65:
                {
                alt5=8;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }

            switch (alt5) {
                case 1 :
                    // Tiger3.g:47:8: nilexp
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_nilexp_in_expr136);
                    nilexp1=nilexp();

                    state._fsp--;

                    adaptor.addChild(root_0, nilexp1.getTree());

                    }
                    break;
                case 2 :
                    // Tiger3.g:48:4: affect
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_affect_in_expr141);
                    affect2=affect();

                    state._fsp--;

                    adaptor.addChild(root_0, affect2.getTree());

                    }
                    break;
                case 3 :
                    // Tiger3.g:49:4: type_id ( '{' ( field_list )* '}' )?
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_type_id_in_expr146);
                    type_id3=type_id();

                    state._fsp--;

                    adaptor.addChild(root_0, type_id3.getTree());
                    // Tiger3.g:49:12: ( '{' ( field_list )* '}' )?
                    int alt2=2;
                    alt2 = dfa2.predict(input);
                    switch (alt2) {
                        case 1 :
                            // Tiger3.g:49:14: '{' ( field_list )* '}'
                            {
                            char_literal4=(Token)match(input,33,FOLLOW_33_in_expr150); 
                            char_literal4_tree = (Object)adaptor.create(char_literal4);
                            adaptor.addChild(root_0, char_literal4_tree);

                            // Tiger3.g:49:18: ( field_list )*
                            loop1:
                            do {
                                int alt1=2;
                                int LA1_0 = input.LA(1);

                                if ( (LA1_0==ID||LA1_0==35) ) {
                                    alt1=1;
                                }


                                switch (alt1) {
                            	case 1 :
                            	    // Tiger3.g:49:18: field_list
                            	    {
                            	    pushFollow(FOLLOW_field_list_in_expr152);
                            	    field_list5=field_list();

                            	    state._fsp--;

                            	    adaptor.addChild(root_0, field_list5.getTree());

                            	    }
                            	    break;

                            	default :
                            	    break loop1;
                                }
                            } while (true);

                            char_literal6=(Token)match(input,34,FOLLOW_34_in_expr155); 
                            char_literal6_tree = (Object)adaptor.create(char_literal6);
                            adaptor.addChild(root_0, char_literal6_tree);


                            }
                            break;

                    }


                    }
                    break;
                case 4 :
                    // Tiger3.g:50:4: ifop
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_ifop_in_expr162);
                    ifop7=ifop();

                    state._fsp--;

                    adaptor.addChild(root_0, ifop7.getTree());

                    }
                    break;
                case 5 :
                    // Tiger3.g:51:4: forop
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_forop_in_expr167);
                    forop8=forop();

                    state._fsp--;

                    adaptor.addChild(root_0, forop8.getTree());

                    }
                    break;
                case 6 :
                    // Tiger3.g:52:4: whileop
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_whileop_in_expr172);
                    whileop9=whileop();

                    state._fsp--;

                    adaptor.addChild(root_0, whileop9.getTree());

                    }
                    break;
                case 7 :
                    // Tiger3.g:53:4: breakexp
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_breakexp_in_expr177);
                    breakexp10=breakexp();

                    state._fsp--;

                    adaptor.addChild(root_0, breakexp10.getTree());

                    }
                    break;
                case 8 :
                    // Tiger3.g:54:4: l= letexp (decl= declaration_list )? inexp (e= expr_seq )? endexp
                    {
                    pushFollow(FOLLOW_letexp_in_expr184);
                    l=letexp();

                    state._fsp--;

                    stream_letexp.add(l.getTree());
                    // Tiger3.g:54:18: (decl= declaration_list )?
                    int alt3=2;
                    int LA3_0 = input.LA(1);

                    if ( (LA3_0==61||(LA3_0>=69 && LA3_0<=70)) ) {
                        alt3=1;
                    }
                    switch (alt3) {
                        case 1 :
                            // Tiger3.g:54:18: decl= declaration_list
                            {
                            pushFollow(FOLLOW_declaration_list_in_expr189);
                            decl=declaration_list();

                            state._fsp--;

                            stream_declaration_list.add(decl.getTree());

                            }
                            break;

                    }

                    pushFollow(FOLLOW_inexp_in_expr193);
                    inexp11=inexp();

                    state._fsp--;

                    stream_inexp.add(inexp11.getTree());
                    // Tiger3.g:54:45: (e= expr_seq )?
                    int alt4=2;
                    int LA4_0 = input.LA(1);

                    if ( ((LA4_0>=ID && LA4_0<=STRING)||(LA4_0>=45 && LA4_0<=46)||(LA4_0>=53 && LA4_0<=54)||LA4_0==56||LA4_0==60||LA4_0==62||(LA4_0>=64 && LA4_0<=65)||LA4_0==71) ) {
                        alt4=1;
                    }
                    switch (alt4) {
                        case 1 :
                            // Tiger3.g:54:45: e= expr_seq
                            {
                            pushFollow(FOLLOW_expr_seq_in_expr197);
                            e=expr_seq();

                            state._fsp--;

                            stream_expr_seq.add(e.getTree());

                            }
                            break;

                    }

                    pushFollow(FOLLOW_endexp_in_expr201);
                    endexp12=endexp();

                    state._fsp--;

                    stream_endexp.add(endexp12.getTree());


                    // AST REWRITE
                    // elements: decl, l, e
                    // token labels: 
                    // rule labels: decl, e, l, retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_decl=new RewriteRuleSubtreeStream(adaptor,"rule decl",decl!=null?decl.tree:null);
                    RewriteRuleSubtreeStream stream_e=new RewriteRuleSubtreeStream(adaptor,"rule e",e!=null?e.tree:null);
                    RewriteRuleSubtreeStream stream_l=new RewriteRuleSubtreeStream(adaptor,"rule l",l!=null?l.tree:null);
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 55:4: -> ^( $l ( ^( DECLARATIONS $decl) )? ( ^( BLOCK $e) )? )
                    {
                        // Tiger3.g:55:7: ^( $l ( ^( DECLARATIONS $decl) )? ( ^( BLOCK $e) )? )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(stream_l.nextNode(), root_1);

                        // Tiger3.g:55:12: ( ^( DECLARATIONS $decl) )?
                        if ( stream_decl.hasNext() ) {
                            // Tiger3.g:55:12: ^( DECLARATIONS $decl)
                            {
                            Object root_2 = (Object)adaptor.nil();
                            root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(DECLARATIONS, "DECLARATIONS"), root_2);

                            adaptor.addChild(root_2, stream_decl.nextTree());

                            adaptor.addChild(root_1, root_2);
                            }

                        }
                        stream_decl.reset();
                        // Tiger3.g:55:35: ( ^( BLOCK $e) )?
                        if ( stream_e.hasNext() ) {
                            // Tiger3.g:55:35: ^( BLOCK $e)
                            {
                            Object root_2 = (Object)adaptor.nil();
                            root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(BLOCK, "BLOCK"), root_2);

                            adaptor.addChild(root_2, stream_e.nextTree());

                            adaptor.addChild(root_1, root_2);
                            }

                        }
                        stream_e.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expr"

    public static class expr_list_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expr_list"
    // Tiger3.g:58:1: expr_list : e1= expr ( ',' e2= expr_list )? -> $e1 ( $e2)? ;
    public final Tiger3Parser.expr_list_return expr_list() throws RecognitionException {
        Tiger3Parser.expr_list_return retval = new Tiger3Parser.expr_list_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal13=null;
        Tiger3Parser.expr_return e1 = null;

        Tiger3Parser.expr_list_return e2 = null;


        Object char_literal13_tree=null;
        RewriteRuleTokenStream stream_35=new RewriteRuleTokenStream(adaptor,"token 35");
        RewriteRuleSubtreeStream stream_expr_list=new RewriteRuleSubtreeStream(adaptor,"rule expr_list");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        try {
            // Tiger3.g:58:12: (e1= expr ( ',' e2= expr_list )? -> $e1 ( $e2)? )
            // Tiger3.g:58:14: e1= expr ( ',' e2= expr_list )?
            {
            pushFollow(FOLLOW_expr_in_expr_list240);
            e1=expr();

            state._fsp--;

            stream_expr.add(e1.getTree());
            // Tiger3.g:58:22: ( ',' e2= expr_list )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==35) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // Tiger3.g:58:23: ',' e2= expr_list
                    {
                    char_literal13=(Token)match(input,35,FOLLOW_35_in_expr_list243);  
                    stream_35.add(char_literal13);

                    pushFollow(FOLLOW_expr_list_in_expr_list247);
                    e2=expr_list();

                    state._fsp--;

                    stream_expr_list.add(e2.getTree());

                    }
                    break;

            }



            // AST REWRITE
            // elements: e2, e1
            // token labels: 
            // rule labels: e1, e2, retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_e1=new RewriteRuleSubtreeStream(adaptor,"rule e1",e1!=null?e1.tree:null);
            RewriteRuleSubtreeStream stream_e2=new RewriteRuleSubtreeStream(adaptor,"rule e2",e2!=null?e2.tree:null);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 59:4: -> $e1 ( $e2)?
            {
                adaptor.addChild(root_0, stream_e1.nextTree());
                // Tiger3.g:59:11: ( $e2)?
                if ( stream_e2.hasNext() ) {
                    adaptor.addChild(root_0, stream_e2.nextTree());

                }
                stream_e2.reset();

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expr_list"

    public static class expr_seq_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expr_seq"
    // Tiger3.g:62:1: expr_seq : e1= expr (pv= ';' e2= expr_seq )? -> $e1 ( $e2)? ;
    public final Tiger3Parser.expr_seq_return expr_seq() throws RecognitionException {
        Tiger3Parser.expr_seq_return retval = new Tiger3Parser.expr_seq_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token pv=null;
        Tiger3Parser.expr_return e1 = null;

        Tiger3Parser.expr_seq_return e2 = null;


        Object pv_tree=null;
        RewriteRuleTokenStream stream_36=new RewriteRuleTokenStream(adaptor,"token 36");
        RewriteRuleSubtreeStream stream_expr_seq=new RewriteRuleSubtreeStream(adaptor,"rule expr_seq");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        try {
            // Tiger3.g:62:10: (e1= expr (pv= ';' e2= expr_seq )? -> $e1 ( $e2)? )
            // Tiger3.g:62:12: e1= expr (pv= ';' e2= expr_seq )?
            {
            pushFollow(FOLLOW_expr_in_expr_seq275);
            e1=expr();

            state._fsp--;

            stream_expr.add(e1.getTree());
            // Tiger3.g:62:21: (pv= ';' e2= expr_seq )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==36) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // Tiger3.g:62:22: pv= ';' e2= expr_seq
                    {
                    pv=(Token)match(input,36,FOLLOW_36_in_expr_seq281);  
                    stream_36.add(pv);

                    pushFollow(FOLLOW_expr_seq_in_expr_seq287);
                    e2=expr_seq();

                    state._fsp--;

                    stream_expr_seq.add(e2.getTree());

                    }
                    break;

            }



            // AST REWRITE
            // elements: e2, e1
            // token labels: 
            // rule labels: e1, e2, retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_e1=new RewriteRuleSubtreeStream(adaptor,"rule e1",e1!=null?e1.tree:null);
            RewriteRuleSubtreeStream stream_e2=new RewriteRuleSubtreeStream(adaptor,"rule e2",e2!=null?e2.tree:null);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 63:4: -> $e1 ( $e2)?
            {
                adaptor.addChild(root_0, stream_e1.nextTree());
                // Tiger3.g:63:11: ( $e2)?
                if ( stream_e2.hasNext() ) {
                    adaptor.addChild(root_0, stream_e2.nextTree());

                }
                stream_e2.reset();

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expr_seq"

    public static class field_list_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "field_list"
    // Tiger3.g:66:1: field_list : ( ID ':=' expr | ',' ID ':=' expr );
    public final Tiger3Parser.field_list_return field_list() throws RecognitionException {
        Tiger3Parser.field_list_return retval = new Tiger3Parser.field_list_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ID14=null;
        Token string_literal15=null;
        Token char_literal17=null;
        Token ID18=null;
        Token string_literal19=null;
        Tiger3Parser.expr_return expr16 = null;

        Tiger3Parser.expr_return expr20 = null;


        Object ID14_tree=null;
        Object string_literal15_tree=null;
        Object char_literal17_tree=null;
